@@ -1,5 +1,16 @@
 package com.hkteam.ecommerce_platform.service;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.stereotype.Service;
+
 import com.hkteam.ecommerce_platform.dto.response.CartItemDetailResponse;
 import com.hkteam.ecommerce_platform.dto.response.CartResponse;
 import com.hkteam.ecommerce_platform.dto.response.PaginationResponse;
@@ -13,20 +24,11 @@ import com.hkteam.ecommerce_platform.mapper.CartMapper;
 import com.hkteam.ecommerce_platform.repository.CartRepository;
 import com.hkteam.ecommerce_platform.util.AuthenticatedUserUtil;
 import com.hkteam.ecommerce_platform.util.PageUtils;
+
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.stereotype.Service;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +40,6 @@ public class CartService {
     CartRepository cartRepository;
     AuthenticatedUserUtil authenticatedUserUtil;
 
-
     @PreAuthorize("hasRole('USER')")
     public PaginationResponse<CartResponse> getCarts(String pageStr, String sizeStr) {
 
@@ -46,19 +47,18 @@ public class CartService {
 
         Pageable pageable = PageUtils.createPageable(pageStr, sizeStr, sort);
 
-        var pageData = cartRepository.findByUserAndIsAvailable(authenticatedUserUtil.getAuthenticatedUser(), true, pageable);
+        var pageData =
+                cartRepository.findByUserAndIsAvailable(authenticatedUserUtil.getAuthenticatedUser(), true, pageable);
 
         int page = Integer.parseInt(pageStr);
 
         PageUtils.validatePageBounds(page, pageData);
 
         List<CartResponse> cartResponses = new ArrayList<>();
-        pageData.getContent().forEach(
-                cart -> {
-                    CartResponse cartResponse = cartMapper.toCartResponse(cart);
-                    cartResponses.add(setItems(cartResponse, cart));
-                }
-        );
+        pageData.getContent().forEach(cart -> {
+            CartResponse cartResponse = cartMapper.toCartResponse(cart);
+            cartResponses.add(setItems(cartResponse, cart));
+        });
 
         return PaginationResponse.<CartResponse>builder()
                 .currentPage(page)
@@ -79,38 +79,40 @@ public class CartService {
 
     CartResponse setItems(CartResponse cartResponse, Cart cart) {
         cartResponse.setItems(filterNotCheckout(cart.getCartItems()).stream()
-            .map(cartItem ->
-                    {
-                        CartItemDetailResponse cartItemDetailResponse = cartItemMapper.toCartItemDetailResponse(cartItem);
-                        cartItemDetailResponse.setAvailable(isAvailable(cartItem));
+                .map(cartItem -> {
+                    CartItemDetailResponse cartItemDetailResponse = cartItemMapper.toCartItemDetailResponse(cartItem);
+                    cartItemDetailResponse.setAvailable(isAvailable(cartItem));
 
-                        if (!Objects.isNull(cartItem.getVariant())) {
-                            cartItemDetailResponse.setSalePrice(cartItem.getVariant().getSalePrice());
-                            cartItemDetailResponse.setImage(cartItem.getVariant().getImageUrl());
-                            cartItemDetailResponse.setOriginalPrice(cartItem.getVariant().getOriginalPrice());
-                            cartItemDetailResponse.setVariantId(cartItem.getVariant().getId());
-                            cartItemDetailResponse.setVariantSlug(cartItem.getVariant().getSlug());
-                            cartItemDetailResponse.setValue(cartItem.getVariant().getValues().stream().map(Value::getValue).collect(Collectors.toList()));
-                        }
-                        return  cartItemDetailResponse;
-
+                    if (!Objects.isNull(cartItem.getVariant())) {
+                        cartItemDetailResponse.setSalePrice(
+                                cartItem.getVariant().getSalePrice());
+                        cartItemDetailResponse.setImage(cartItem.getVariant().getImageUrl());
+                        cartItemDetailResponse.setOriginalPrice(
+                                cartItem.getVariant().getOriginalPrice());
+                        cartItemDetailResponse.setVariantId(
+                                cartItem.getVariant().getId());
+                        cartItemDetailResponse.setVariantSlug(
+                                cartItem.getVariant().getSlug());
+                        cartItemDetailResponse.setValue(cartItem.getVariant().getValues().stream()
+                                .map(Value::getValue)
+                                .collect(Collectors.toList()));
                     }
-            )
-            .collect(Collectors
-                    .toList()));
+                    return cartItemDetailResponse;
+                })
+                .collect(Collectors.toList()));
 
         return cartResponse;
     }
 
     boolean isAvailable(CartItem cartItem) {
-        if (cartItem.getProduct().isBlocked()  || !cartItem.getProduct().isAvailable()){
+        if (cartItem.getProduct().isBlocked() || !cartItem.getProduct().isAvailable()) {
             return false;
         }
         if (Objects.isNull(cartItem.getVariant())) {
-            return  cartItem.getQuantity() >= cartItem.getProduct().getQuantity();
+            return cartItem.getQuantity() >= cartItem.getProduct().getQuantity();
         }
 
-        return  cartItem.getQuantity() >= cartItem.getVariant().getQuantity();
+        return cartItem.getQuantity() >= cartItem.getVariant().getQuantity();
     }
 
     @PreAuthorize("hasRole('USER')")
@@ -123,9 +125,7 @@ public class CartService {
 
         try {
             cartRepository.delete(cart);
-        }
-        catch (Exception e)
-        {
+        } catch (Exception e) {
             log.error("Error when delete cart: {}", e.getMessage());
             throw new AppException(ErrorCode.UNKNOWN_ERROR);
         }
